build: Make dependencies actually required
It's much better to fail on "cmake ." than on actual build.

--- a/mirac_network/CMakeLists.txt
+++ b/mirac_network/CMakeLists.txt
@@ -5,11 +5,11 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=c++11")
 include_directories ("${PROJECT_SOURCE_DIR}/include" )
 include_directories ("${PROJECT_SOURCE_DIR}/wfd_parser" )
 
-find_package(PkgConfig)
-pkg_check_modules (GLIB2   glib-2.0)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules (GLIB2 REQUIRED glib-2.0)
 include_directories(${GLIB2_INCLUDE_DIRS})
 
-pkg_check_modules (GST   gstreamer-1.0)
+pkg_check_modules (GST REQUIRED gstreamer-1.0)
 include_directories(${GST_INCLUDE_DIRS})
 
 add_library(mirac STATIC mirac-network.cpp mirac-gst.cpp mirac-broker.cpp)
