--- a/mirac_network/CMakeLists.txt
+++ b/mirac_network/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(${GLIB2_INCLUDE_DIRS})
 pkg_check_modules (GST REQUIRED gstreamer-1.0)
 include_directories(${GST_INCLUDE_DIRS})
 
-add_library(mirac STATIC mirac-network.cpp mirac-gst.cpp mirac-broker.cpp)
+add_library(mirac STATIC mirac-network.cpp mirac-gst-sink.cpp mirac-gst-test-source.cpp mirac-broker.cpp)
 
 add_executable(network-test network-test.cpp)
 target_link_libraries (network-test ${GLIB2_LIBRARIES} mirac)
