--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(wfd_parser)
 add_subdirectory(p2p)
 add_subdirectory(mirac_network)
 add_subdirectory(sink)
+add_subdirectory(desktop_source)
