--- a/mirac_network/CMakeLists.txt
+++ b/mirac_network/CMakeLists.txt
@@ -2,6 +2,7 @@
 #to use target_compile_options or add_compile_options
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=c++11")
 
+include_directories ("${PROJECT_SOURCE_DIR}" )
 include_directories ("${PROJECT_SOURCE_DIR}/include" )
 include_directories ("${PROJECT_SOURCE_DIR}/wfd/parser" )
 
