--- a/sink/CMakeLists.txt
+++ b/sink/CMakeLists.txt
@@ -1,9 +1,9 @@
 #FIXME in the future: with cmake 2.8.12 and up it's better
 #to use target_compile_options or add_compile_options
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O0 -ggdb3 -pthread -std=c++11")
 
+include_directories ("${PROJECT_SOURCE_DIR}")
 include_directories ("${PROJECT_SOURCE_DIR}/include")
-include_directories ("${PROJECT_SOURCE_DIR}/wfd/parser")
 include_directories ("${PROJECT_SOURCE_DIR}/p2p")
 include_directories ("${PROJECT_SOURCE_DIR}/mirac_network")
 
@@ -18,6 +18,6 @@ include_directories(${GIO_INCLUDE_DIRS})
 pkg_check_modules (GST REQUIRED gstreamer-1.0)
 include_directories(${GST_INCLUDE_DIRS})
 
-add_library(sink STATIC mirac-sink.cpp)
+add_library(gst_wfd_sink STATIC mirac-sink.cpp)
 add_executable(sink-test main.cpp)
-target_link_libraries (sink-test sink mirac wfdparser p2p ${GIO_LIBRARIES} ${GST_LIBRARIES})
+target_link_libraries (sink-test gst_wfd_sink mirac wfdparser p2p ${GIO_LIBRARIES} ${GST_LIBRARIES})
