Make shared library interfaces for wisywidi library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(wfd/parser)
 add_subdirectory(wfd/common)
 add_subdirectory(wfd/source)
 add_subdirectory(wfd/sink)
+add_subdirectory(wfd)
 add_subdirectory(p2p)
 add_subdirectory(mirac_network)
 add_subdirectory(sink)
