--- a/wfd/common/CMakeLists.txt
+++ b/wfd/common/CMakeLists.txt
@@ -1,8 +1,7 @@
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -std=c++11 -ggdb3 -Wall")
-set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -O0 -std=c99 -ggdb3 -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -fvisibility=hidden -fPIC")
+set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -std=c99 -Wall")
 
 include_directories ("${PROJECT_SOURCE_DIR}" )
 
-add_library(common STATIC
-    message_handler.cpp rtsp_input_handler.cpp typed_message.cpp
-)
+add_library(wfdcommon OBJECT
+    message_handler.cpp rtsp_input_handler.cpp typed_message.cpp)
