--- a/wfd/sink/CMakeLists.txt
+++ b/wfd/sink/CMakeLists.txt
@@ -1,9 +1,7 @@
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -std=c++11 -ggdb3 -Wall")
 set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -O0 -std=c99 -ggdb3 -Wall")
 
-include_directories ("${PROJECT_SOURCE_DIR}/public" )
-include_directories ("${PROJECT_SOURCE_DIR}/common" )
-include_directories ("${PROJECT_SOURCE_DIR}/parser" )
+include_directories ("${PROJECT_SOURCE_DIR}" )
 
 add_library(sink STATIC
     sink.cpp cap_negotiation_state.cpp init_state.cpp
