--- a/mirac_network/CMakeLists.txt
+++ b/mirac_network/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=c++11")
 
 include_directories ("${PROJECT_SOURCE_DIR}" )
 include_directories ("${PROJECT_SOURCE_DIR}/include" )
-include_directories ("${PROJECT_SOURCE_DIR}/libwds/parser" )
+include_directories ("${PROJECT_SOURCE_DIR}/libwds/rtsp" )
 include_directories ("${PROJECT_SOURCE_DIR}/libwds/public" )
 
 find_package(PkgConfig REQUIRED)
