Improvements to video cap negotiations APIs
- Renaming to better reflect the Miracast specification
- Use std::bitset in H264 video codec structures for simplicity
- Removed the unneeded methods from MediaManager interface
- Moved video format aux function to video_format.cpp file
- Fixes in M3, M4 messages handling

--- a/libwds/common/CMakeLists.txt
+++ b/libwds/common/CMakeLists.txt
@@ -4,4 +4,4 @@ set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -std=c99 -Wall")
 include_directories ("${PROJECT_SOURCE_DIR}" )
 
 add_library(wdscommon OBJECT
-    message_handler.cpp rtsp_input_handler.cpp source_media_manager.cpp)
+    message_handler.cpp rtsp_input_handler.cpp video_format.cpp)
