--- a/libwds/rtsp/CMakeLists.txt
+++ b/libwds/rtsp/CMakeLists.txt
@@ -32,7 +32,7 @@ add_library(wdsrtsp OBJECT
     preferreddisplaymode.cpp uibccapability.cpp propertyerrors.cpp scanner.cpp
 )
 
-add_executable(test-wds tests.cpp $<TARGET_OBJECTS:wdsrtsp>)
+add_executable(test-wds tests.cpp $<TARGET_OBJECTS:wdsrtsp> $<TARGET_OBJECTS:wdscommon>)
 set(LINK_FLAGS ${LINK_FLAGS} "-Wl,-whole-archive")
 target_link_libraries (test-wds)
 
