Fix build dependencies
This makes sure wdsrtsp is built before any other libwds components,
so that parser's generated files are guaranteed to exist. Also parallel
builds should work now.

--- a/libwds/common/CMakeLists.txt
+++ b/libwds/common/CMakeLists.txt
@@ -5,3 +5,4 @@ include_directories ("${PROJECT_SOURCE_DIR}" )
 
 add_library(wdscommon OBJECT
     message_handler.cpp rtsp_input_handler.cpp video_format.cpp)
+add_dependencies(wdscommon wdsrtsp)
