Add support to install libwds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 project(wds)
+
 enable_testing()
+
+include(GNUInstallDirs)
+
 add_subdirectory(libwds/rtsp)
 add_subdirectory(libwds/common)
 add_subdirectory(libwds/source)
