--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,15 @@ cmake_minimum_required(VERSION 2.8)
 
 project(wds CXX)
 
+set(WDS_VERSION_MAJOR 0)
+set(WDS_VERSION_MINOR 1)
+set(WDS_VERSION_PATCH 0)
+
 enable_testing()
 
 include(GNUInstallDirs)
 
+add_subdirectory(data)
 add_subdirectory(libwds/rtsp)
 add_subdirectory(libwds/common)
 add_subdirectory(libwds/source)
