--- a/data/wds.pc.in
+++ b/data/wds.pc.in
@@ -1,6 +1,6 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
-libdir=${prefix}/@LIB_INSTALL_DIR@
+libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 includedir=${exec_prefix}/include
  
 Name: @CMAKE_PROJECT_NAME@
