--- a/data/wds.pc.in
+++ b/data/wds.pc.in
@@ -4,7 +4,7 @@ libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 includedir=${exec_prefix}/include
  
 Name: @CMAKE_PROJECT_NAME@
-Description: Library to build Miracast/WiDi-enabled applications
+Description: Library to build WiFi Display applications
 Version: @WDS_VERSION_MAJOR@.@WDS_VERSION_MINOR@.@WDS_VERSION_PATCH@
 Libs: -L${libdir} -lwds
 Cflags: -I${includedir}/wds
