--- a/libwds/rtsp/CMakeLists.txt
+++ b/libwds/rtsp/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -std=c99 -Wall")
 set(PARSER_GEN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/gen")
 file(MAKE_DIRECTORY ${PARSER_GEN_DIR})
 
-include_directories ("${PROJECT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}" "${PARSER_GEN_DIR}" "${CMAKE_CURRENT_BINARY_DIR}")
+include_directories ("${PROJECT_SOURCE_DIR}" "${PARSER_GEN_DIR}" )
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   set(PARSER_DEBUG_OPTIONS "--debug -v")
