--- a/libwds/source/CMakeLists.txt
+++ b/libwds/source/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -fvisibility=hidden -fPIC")
 set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -std=c99 -Wall")
 
-include_directories ("${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/libwds/rtsp" "${PROJECT_BINARY_DIR}/libwds/rtsp")
+include_directories ("${PROJECT_SOURCE_DIR}")
 
 add_library(wdssource OBJECT
     source.cpp cap_negotiation_state.cpp init_state.cpp
