--- a/sink/CMakeLists.txt
+++ b/sink/CMakeLists.txt
@@ -20,3 +20,7 @@ include_directories(${GST_INCLUDE_DIRS})
 
 add_executable(sink-test main.cpp sink-app.cpp sink.cpp gst_sink_media_manager.cpp)
 target_link_libraries (sink-test mirac wds p2p ${GIO_LIBRARIES} ${GST_LIBRARIES})
+
+if (WDS_INSTALL_TESTS)
+  install(PROGRAMS sink-test DESTINATION ${CMAKE_INSTALL_FULL_BINDIR})
+endif()
