--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(p2p)
 add_subdirectory(mirac_network)
 add_subdirectory(sink)
 add_subdirectory(desktop_source)
+add_subdirectory(fuzz)
